Remove list of products from Category model