@@ -30,23 +30,23 @@ public class CategoryEntity {
     public Category toDomainModel() {
         List<Product> products = (this.productEntities == null ? Collections.emptyList() : this.productEntities.stream()
                 .map(ProductEntity::toDomainModel)
-                .collect(Collectors.toList()));
+                .toList());
         return Category.builder()
                 .id(this.id)
                 .name(this.name)
-                .products(products)
+                //.products(products)
                 .build();
     }
 
     public static CategoryEntity fromCategory(Category category) {
-        List<ProductEntity> productEntities = (category.getProducts() == null ? Collections.emptyList() : category.getProducts().stream()
+        /*List<ProductEntity> productEntities = (category.getProducts() == null ? Collections.emptyList() : category.getProducts().stream()
                 .map(ProductEntity::fromProduct) // You need to implement this method in ProductEntity
-                .collect(Collectors.toList()));
+                .collect(Collectors.toList()));*/
 
         CategoryEntity categoryEntity = new CategoryEntity();
         categoryEntity.setId(category.getId());
         categoryEntity.setName(category.getName());
-        categoryEntity.setProductEntities(productEntities);
+        //categoryEntity.setProductEntities(productEntities);
         return categoryEntity;
     }
 
@@ -79,7 +79,6 @@ public class CategoryEntity {
 
     public String toString() {
         return "Category(id=" + this.getId() +
-                ", name=" + this.getName() +
-                /*", products=" + this.getProducts() +*/ ")";
+                ", name=" + this.getName() + ")";
     }
 }
